Removed a few more extend-type macro expansions.